# tp-highload

./: README.md
static-web-server/: CMakeLists.txt  Makefile  README.md  httptest.py  main.cpp
static-web-server/docker/: Dockerfile  nginx.Dockerfile
static-web-server/include/: constants.h++  http_handler.h++  responses.h++  server.h++  utils.h++
static-web-server/nginx/: nginx.conf
static-web-server/src/: http_handler.cpp  server.cpp  utils.cpp
